--- a/markup/components/basket/basket.jade
+++ b/markup/components/basket/basket.jade
@@ -31,8 +31,9 @@ mixin basket-order(data)
 				.basket__table-col.basket__table-col_title(data-title='Название')
 					a.basket__table-product(href="#link") Пери
 				.basket__table-col.basket__table-col_quant(data-title='Количество')
-					span.basket__table-quant
-						+spinner()
+					span.basket__table-quant 1
+						//- +spinner()
+
 
 				.basket__table-col.basket__table-col_price(data-title='Цена')
 					span.basket__table-price 2 200 руб.
@@ -49,8 +50,9 @@ mixin basket-order(data)
 				.basket__table-col.basket__table-col_title(data-title='Название')
 					a.basket__table-product(href="#link") Пери
 				.basket__table-col.basket__table-col_quant(data-title='Количество')
-					span.basket__table-quant
-						+spinner()
+					span.basket__table-quant 1
+						//- +spinner()
+
 
 				.basket__table-col.basket__table-col_price(data-title='Цена')
 					span.basket__table-price 2 200 руб.
@@ -104,8 +106,8 @@ mixin basket-full(data)
 				.basket__table-col.basket__table-col_title(data-title='Название')
 					a.basket__table-product(href="#link") Пери
 				.basket__table-col.basket__table-col_quant(data-title='Количество')
-					span.basket__table-quant
-						+spinner()
+					span.basket__table-quant 1
+						//- +spinner()
 
 				.basket__table-col.basket__table-col_price(data-title='Цена')
 					span.basket__table-price 2 200 руб.
@@ -122,8 +124,8 @@ mixin basket-full(data)
 				.basket__table-col.basket__table-col_title(data-title='Название')
 					a.basket__table-product(href="#link") Пери
 				.basket__table-col.basket__table-col_quant(data-title='Количество')
-					span.basket__table-quant
-						+spinner()
+					span.basket__table-quant 1
+						//- +spinner()
 
 				.basket__table-col.basket__table-col_price(data-title='Цена')
 					span.basket__table-price 2 200 руб.
