--- a/markup/components/header/header.styl
+++ b/markup/components/header/header.styl
@@ -463,6 +463,7 @@
 		font-family $pt-sans-bldit
 		font-size 14px
 		color $text-color
+		text-align left
 	&__form-body
 		padding-bottom 20px
 	&__form-submit
@@ -473,6 +474,7 @@
 		margin-left -15px
 		margin-right -15px
 		padding 30px 15px
+		background #f1eeeb
 	&__submit
 		border none
 		padding 10px
