--- a/markup/components/side/side.styl
+++ b/markup/components/side/side.styl
@@ -25,7 +25,8 @@
 		text-decoration none
 		&:first-child
 			background url('../images/general/dots-vert.png') 100% 0% repeat-y
-
+		+below($tablet-l)
+			padding 16px r-percent(10, 280) 13px r-percent(10, 280)
 		+below($tablet)
 			width 50%
 	&__vk-widget
