--- a/markup/pages/recipient.jade
+++ b/markup/pages/recipient.jade
@@ -39,15 +39,14 @@ html(class="no-js", lang="ru")
 						h1.main__title.main__title_style-second Оформление заказа
 
 						.main__row
-							+personal-data-form()
-
+							+personal-data-form_second()
 						.main__row
 							.main__delivery-form
 								+delivery-form()
 							.main__calendar
 								+calendar()
 						.main__row
-							+recipient-form()
+							+recipient-form_second()
 
 						.main__row
 							+payment-form()
