--- a/markup/components/forms/forms.styl
+++ b/markup/components/forms/forms.styl
@@ -1,19 +1,22 @@
 .form
 	margin-top 60px
-	width 815px
+	// margin-right 12px
+	// margin-left 12px
+	// width 815px
 	font-family $pt-sans-it
 	font-size 14px
 	+below($desktop)
 		width auto
 	&__form
 		margin-left 12px
+		margin-right 12px
 		+below($tablet)
 			margin-left 0
+			margin-right 0
 	&__body
 		margin-bottom 50px
 		padding 26px 0 14px
-		background #E6E4DF
-		background rgba(230, 229, 223, 0.7)
+		background rgba(232, 230, 225, 0.7)
 		color $text-color
 		box-shadow 0px 5px 0px #e0deda,0px -5px 0px #e0deda,-5px 0px 0px #e0deda,5px 0px 0px #e0deda, 2px 7px 0px #b9b3ad,-2px 7px 0px #b9b3ad,2px -7px 0px #b9b3ad,-2px -7px 0px #b9b3ad, 7px 2px 0px #b9b3ad,7px -2px 0px #b9b3ad,-7px 2px 0px #b9b3ad,-7px -2px 0px #b9b3ad,	4px 10px 0px #efeeec,-4px 10px 0px #efeeec,4px -10px 0px #efeeec,-4px -10px 0px #efeeec, 10px 4px 0px #efeeec,10px -4px 0px #efeeec,-10px 4px 0px #efeeec,-10px -4px 0px #efeeec, 6px 12px 0px #c5c0bb,-6px 12px 0px #c5c0bb,6px -12px 0px #c5c0bb,-6px -12px 0px #c5c0bb, 12px 6px 0px #c5c0bb,12px -6px 0px #c5c0bb,-12px 6px 0px #c5c0bb,-12px -6px 0px #c5c0bb
 	&__w
@@ -38,24 +41,55 @@
 		line-height 16px
 		+placeholder()
 			color #786854
+	.form__select
+		border 2px solid #d5d1ca
+		width 100%
+		background-color #f0eeea
+		overflow hidden
+	.select
+		border none
+		padding 6px 8px 3px 3px
+		background transparent
+		width 110%
+		color #786854
+		font-family $pt-sans-it
+		font-size 14px
+		line-height 16px
+		cursor pointer
+
 	&__bottom
+		margin-bottom 50px
+		margin-right 15px
+		margin-left 15px
 		text-align right
-	&__submit
+	&__submit,
+	&__button_back
+		margin-left 50px
 		@extends .button
 		padding-left 24px
 		padding-right 38px
 		color #564d3e
 		font-family $pt-sans-bldit
-		font-size 14px
+		font-size 16px
 		line-height 30px
 		text-decoration none
 		&:hover
 			text-decoration underline
 		+below($tablet)
+			margin-left 0
 			display block
 			width 100%
+			text-align center
+
+	&__button_back
+		+below($tablet)
+			margin-left 0
+			margin-bottom 30px
 
 .form_personal-order
+	margin-left 0
+	+below($mobile-l)
+		margin-left 12px
 	.form__captcha
 		margin-bottom 26px
 		font-size 0
@@ -105,4 +139,175 @@
 		font-family $pt-serif-bldit
 		font-size 15px
 		line-height 1
+
+.form_style-second
+	margin-top 0
+	.form__title
+		margin-left 14px
+		margin-bottom 24px
+		color #5c5039
+		font-family $pt-sans-bldit
+		font-size 16px
+		line-height 18px
+	.form__row-checkbox
+		margin-top 14px
+		margin-bottom 14px
+	.form__button
+		margin-left 40px
+		padding-left 18px
+		padding-right 18px
+		@extends .button
+		color #786b58
+		font-family $pt-sans-bldit
+		font-size 16px
+		line-height 30px
+		text-decoration none
+		&:first-child
+			margin-left 0
+		+below($tablet)
+			margin-left 0
+			width 100%
+			text-align center
+	.form__row_radio
+		font-size 0
+	.form__radio
+		display inline-block
+		vertical-align top
+
+	.form__button_back
+		+below($tablet)
+			margin-bottom 30px
+
+.form_personal-data
+	margin-top 60px
+	.form__body
+		padding-top 13px
+	.form__title
+		margin-bottom 16px
+
+.form_delivery
+	.form__body
+		padding-right 26px
+		padding-left 26px
+		+below($mobile-l)
+			padding-right 6px
+			padding-left 6px
+	.form__w
+		width auto
+	.form__title
+		margin-left 0
+	.form__select
+		position relative
+		border 2px solid #d5d1ca
+		&:after
+			position absolute
+			top 50%
+			right 8px
+			margin-top -4px
+			content ""
+			width 0
+			height 0
+			border-style solid
+			border-width 9px 8.5px 0 8.5px
+			border-color #d8d1c8 transparent transparent transparent
+	.form__row-home,
+	.form__row-home-2
+		.form__input
+			margin-right 2.6%
+			width 48.2%
+			&:last-child
+				margin-right 0
+			+below($desktop)
+				width 48.4%
+			+below($tablet-l)
+				margin-bottom 11px
+				margin-right 0
+				width 100%
+				&:last-child
+					margin-bottom 0
+	.form__row_radio-bottom
+		.form__radio
+			margin-right 10px
+			margin-bottom 10px
+			+below($desktop)
+				width 30%
+				&:nth-child(3n)
+					margin-right 0
+			+below($tablet)
+				margin-right 0
+				width 49%
+
+.form__row-delivery-type
+	.form__radio
+		margin-right 25px
+		:last-child
+			margin-right 0
+
+.form__delivery-courier,
+	.form__delivery-self
+		display none
+	.form__delivery-courier_active,
+	.form__delivery-self_active
+		display block
+
+.form_recipient
+	width auto
+	.form__body
+		padding-right 26px
+		padding-left 26px
+		+below($mobile-l)
+			padding-right 6px
+			padding-left 6px
+	.form__w
+		width auto
+	.form__title
+		margin-left 0
+	.checkbox
+		margin-right 24px
+		display inline-block
+		vertical-align top
+		&:last-child
+			margin-right 0
+		+below(490px)
+			margin-bottom 11px
+			&:last-child
+				margin-bottom 0
+.form_payment
+	width 434px
+	+below($tablet)
+		width auto
+	.form__body
+		padding-right 36px
+		padding-left 36px
+		+below($mobile-l)
+			padding-right 16px
+			padding-left 16px
+	.form__w
+		width auto
+	.form__title
+		margin-left 0
+	.form__row
+		margin-bottom 16px
+	.form__radio_visa,
+	.form__radio_webmoney,
+	.form__radio_yandex,
+	.form__radio_cash,
+	.form__radio_deposit,
+	.form__radio_salon
+		position relative
+		margin-left 42px
+		&:after
+			position absolute
+			top 50%
+			left -42px
+			margin-top -12px
+			content ""
+			bg($payment-icon)
+	.form__radio_deposit
+		&:after
+			bg($payment-icon-2)
+
+	.radio__radio
+		display inline-block
+		vertical-align middle
 
